[package]
name = "wyrtap-reader"
version = "0.1.0"
authors = ["linde_5"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "*"
openssl-sys = "*"
rand = "*"
rpassword = "*"
rust-crypto = "*"
rust-lzma = "*"
termion = "*"
whoami = "*"
libpulse-binding = "*"
libpulse-simple-binding = "*"